fix($tablet): fixed overflow on projects paragraph text

--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -36,7 +36,7 @@
         @media #{$desktop}
 
         {
-            width: 100%;
+            width: inherit;
             margin: 0 auto 50px auto;
         }
 
